--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,23 +79,13 @@
         tools:ignore="LabelFor,SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/btIncluir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/incluir"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTelefone" />
-
-    <Button
         android:id="@+id/btAlterar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/alterar"
-        app:layout_constraintStart_toStartOf="@+id/btIncluir"
-        app:layout_constraintTop_toBottomOf="@+id/btIncluir" />
+        android:layout_marginTop="16dp"
+        android:text="Salvar"
+        app:layout_constraintTop_toBottomOf="@+id/etTelefone"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/btExcluir"
@@ -115,12 +105,4 @@
         app:layout_constraintStart_toStartOf="@+id/btExcluir"
         app:layout_constraintTop_toBottomOf="@+id/btExcluir" />
 
-    <Button
-        android:id="@+id/btListar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/listar"
-        app:layout_constraintStart_toStartOf="@+id/btPesquisar"
-        app:layout_constraintTop_toBottomOf="@+id/btPesquisar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
